Call directly RenderBlock::deleteLineBoxTree https://bugs.webkit.org/show_bug.cgi?id=102761

Reviewed by Darin Adler.

Instead of implementing RenderLineBoxList::deleteLineBoxTree logic inside
RenderBlock::determineStartPosition, we can reuse the code. The commentaries added
in the changeset #86628 are not valid anymore, nextRootBox is casting m_nextLineBox
and nextLineBox is returning m_nextLineBox.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::determineStartPosition):


Canonical link: https://commits.webkit.org/133022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148468 268f45cc-cd09-0410-ab3c-d52691b4dbfc